kubernetes/superinsight-api-inference.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: superinsight-dev
  name: superinsight-api-inference
spec:
  selector:
    app: superinsight-api-inference
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: superinsight-dev
  name: superinsight-api-inference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superinsight-api-inference
  template:
    metadata:
      labels:
        app: superinsight-api-inference
    spec:
      containers:
        - name: superinsight-api-inference
          image: docker.io/superinsight/superinsight-api-inference:latest
          imagePullPolicy: Always
