kubernetes/superinsight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: superinsight-dev
  name: superinsight-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: finetuning.api.superinsight.dev #Modify the host do your own domain here
      http:
        paths:
          - backend:
              service:
                name: superinsight-api-finetuning
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: inference.api.superinsight.dev #Modify the host do your own domain here
      http:
        paths:
          - backend:
              service:
                name: superinsight-api-inference
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: product.api.superinsight.dev #Modify the host do your own domain here
      http:
        paths:
          - backend:
              service:
                name: superinsight-api-product
                port:
                  number: 8080
            path: /
            pathType: Prefix
